removed extra comments, refined test classes